added more type specifiers